[package]
name = "scenarii_generator"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Sauvage", "Emre Ucar", "Timothée Fisher"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
