[package]
name = "high_frequency_exporter"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Sauvage", "Emre Ucar", "Timothée Fisher"]
description = "A high-frequency metrics exporter"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
