[package]
name = "metric_data_store"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Sauvage", "Emre Ucar", "Timothée Fisher"]
description = "A data store for the high-frequency metrics exporter"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
metric_data_store_derive = { version = "0.1.0", path = "../metric_data_store_derive" }
