[package]
name = "router_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
ctrlc = "3.5.2"
eyre = "0.6.12"
metric_data_store = { version = "0.1.0", path = "../metric_data_store" }
qdisc_statistics = { version = "0.1.0", path = "../qdisc_statistics" }
reqwest = "0.13.2"
serde_json = "1.0.149"
spin_sleep = "1.3.3"
tokio = { version = "1.49.0", features = ["full"] }
