[package]
name = "metric_data_store_derive"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Sauvage", "Emre Ucar", "Timothée Fisher"]
description = "A data store for the high-frequency metrics exporter"

[dependencies]
eyre = "0.6.12"
proc-macro-error = "1.0.4"
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.111", features = ["full", "parsing"] }

[lib]
proc-macro = true